--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -117,7 +117,12 @@
             color: #090761;
          }
 
-
+            .buttonWrapper {
+               width: 100%;
+               display: flex;
+               align-items: center;
+               justify-content: space-between;
+            }
 
          button {
             font-family: "Jost";
@@ -132,6 +137,15 @@
             margin-top: 15px;
             transition: all ease 0.5s;
             cursor: pointer;
+            
+            &:nth-child(2) {
+               background: red;
+               border: 1px solid red;
+
+               &:hover {
+                  color: red;
+               }
+            }
             
             &:hover {
                transition: all ease 0.5s;
