--- a/src/pages/Settings_Pages/LidForm/LidForm.scss
+++ b/src/pages/Settings_Pages/LidForm/LidForm.scss
@@ -1,10 +1,10 @@
-.lidFormm {
+.lidFormm1 {
    padding: 30px;
 
-   .inner {
+   .inner1 {
       width: 100%;
 
-      .banner {
+      .banner1 {
          width: 100%;
          height: 170px;
          margin-bottom: 35px;
@@ -19,14 +19,14 @@
          }
       }
 
-      .request_center {
+      .request_center1 {
          padding: 45px 40px 28px 43px;
          width: 100%;
          box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.16);
          border-radius: 7px;
          margin-bottom: 30px;
 
-         .top_iteems {
+         .top_iteems1 {
             display: flex;
             align-items: flex-start;
             justify-content: space-between;
@@ -59,14 +59,14 @@
          }
       }
 
-      .user_name {
+      .user_name1 {
          padding: 43px 50px 64px 44px;
          background: #FFFFFF;
          box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.16);
          border-radius: 7px;
          margin-bottom: 30px;
 
-         .name_label {
+         .name_label1 {
             font-family: "Jost";
             font-style: normal;
             font-weight: 600;
@@ -77,7 +77,7 @@
             display: block;
          }
 
-         .name_input {
+         .name_input1 {
             border: none;
             border: 1px solid #C9D5E4;
             box-sizing: border-box;
@@ -86,13 +86,13 @@
             outline: none;
             padding: 13px;
 
-            &.comment {
+            &.comment1 {
                height: 125px;
                resize: vertical;
             }
          }
 
-         .form-control {
+         .form-control1 {
             font-family: "Calibri";
             border-radius: 7px;
          }
