--- a/src/pages/Settings_Pages/EnterForm/EnterForm.scss
+++ b/src/pages/Settings_Pages/EnterForm/EnterForm.scss
@@ -1,5 +1,5 @@
 .request-wrapper1 {
-   padding: 30px 30px;
+   padding: 50px 90px;
 
    .inner1 {
       width: 100%;
@@ -93,6 +93,7 @@
          padding: 34px 47px 48px 40px;
          box-sizing: border-box;
          align-items: center;
+         justify-content: space-around;
 
          .right_part1 {
             margin-right: 38px;
