--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -113,8 +113,8 @@
 
 
             img {
-               width: 100px;
-               height: 100px;
+               width: 100%;
+               height: auto;
                object-fit: contain;
                border-radius: 7px;
             }
