--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -1,6 +1,8 @@
 .loaderBox {
    position: absolute;
    width: 100%;
+   min-height: 100vh;
+   max-height: 100vh;
    height: 100%;
    left: 0;
    right: 0;
