--- a/src/pages/Teachers/containers/TeacherProfileRight/TeacherProfileRight.scss
+++ b/src/pages/Teachers/containers/TeacherProfileRight/TeacherProfileRight.scss
@@ -117,6 +117,26 @@
          font-size: .8rem;
          margin-bottom: 0;
          color: #000000;
+         position: relative;
+
+         &::before {
+            content: "";
+            position: absolute;
+            width: 0%;
+            height: 0.4px;
+            padding: 2px 0;
+            background: #090761;
+            left: 0;
+            bottom: 0;
+            transition: all ease 0.5s;
+         }
+
+         &:hover {
+            &:before {
+               width: 100%;
+               transition: all ease 0.5s;
+            }
+         }
       }
 
       .izma__teachers-profile-right-wrapper-name-wrapper-phone {
