--- a/src/components/Davomat/davomat.module.scss
+++ b/src/components/Davomat/davomat.module.scss
@@ -154,7 +154,7 @@ th:first-child {
     margin-bottom: 20px;
     border-bottom: 1px solid grey;
 
-    th {
+    .th {
         padding: 8px 0;
     }
 
