--- a/src/components/TableBlock/TableBlock.scss
+++ b/src/components/TableBlock/TableBlock.scss
@@ -122,8 +122,11 @@
          width: 30%;
          font-weight: normal;
          overflow: hidden;
-         
-         span {
+            .stuentGrWr {
+               margin: 5px 0;
+            }
+         .studentGr {
+            
             border-radius: 2px;
             text-align: center;
 
