--- a/src/pages/Settings_Pages/Shakillar/Shakillar.scss
+++ b/src/pages/Settings_Pages/Shakillar/Shakillar.scss
@@ -7,6 +7,7 @@
 .izma__settings-shapes-up {
    display: flex;
    align-items: center;
+   justify-content: space-between;
    margin-bottom: 25px;
 }
 
@@ -16,6 +17,7 @@
    font-size: 28px;
    line-height: 43px;
    color: #000000;
+   margin-bottom: 0;
 }
 
 .izma__settings-shapes-up-button {
