--- a/src/pages/Moliya_Pages/PaymentGroups/PaymentGroups.scss
+++ b/src/pages/Moliya_Pages/PaymentGroups/PaymentGroups.scss
@@ -4,7 +4,7 @@
 }
 
 .izma__finance-payment-groups {
-   padding: 50px 30px;
+   padding: 30px 0;
    background-color: var(--background-main);
 }
 
@@ -28,7 +28,7 @@
 
 .izma__finance-payment-right-tabs-second-up {
    margin: 31px 0;
-   width: 930px;
+   width: 100%;
    display: flex;
    align-items: center;
    background: #090761;
