--- a/src/pages/Moliya_Pages/Salary/Salary.scss
+++ b/src/pages/Moliya_Pages/Salary/Salary.scss
@@ -1,7 +1,7 @@
 .izma__finance-salary {
    display: flex;
    flex-direction: column;
-   padding: 50px 30px;
+   padding:  30px 0;
    background-color: var(--background-main);
 }
 
@@ -44,6 +44,7 @@
    line-height: 126.5%;
    margin-right: 35px;
    color: #222222;
+   margin-bottom: 0;
 }
 
 .izma__finance-salary-up-dates-btn {
