--- a/src/pages/Moliya_Pages/Salary/containers/SalaryUp/SalaryUp.scss
+++ b/src/pages/Moliya_Pages/Salary/containers/SalaryUp/SalaryUp.scss
@@ -1,7 +1,7 @@
 .harajatlar_wrapper {
    .inner {
       margin-top: 30px;
-      padding: 43px 62px 0 61px;
+      padding: 30px;
       background: #FFFFFF;
       box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.16);
       border-radius: 7px;
@@ -42,6 +42,7 @@
             line-height: 105px;
             color: #FFFFFF;
             margin-right: 16px;
+            margin-bottom: 0;
          }
 
          .text {
@@ -51,6 +52,7 @@
             font-size: 18px;
             line-height: 27px;
             color: #FFFFFF;
+            margin-bottom: 0;
          }
       }
 
