--- a/src/pages/Settings_Pages/Employees/Employees.scss
+++ b/src/pages/Settings_Pages/Employees/Employees.scss
@@ -10,7 +10,7 @@
       font-weight: 600;
       font-size: 30px;
       line-height: 43px;
-      margin-bottom: 23px;
+      margin-bottom: 0;
       color: #000000;
    }
 }
@@ -20,6 +20,7 @@
 }
 
 .hodim_heading {
+   margin-bottom: 23px;
    display: flex;
    align-items: center;
    justify-content: space-between;
