--- a/src/pages/Settings_Pages/Rooms/Rooms.scss
+++ b/src/pages/Settings_Pages/Rooms/Rooms.scss
@@ -7,6 +7,7 @@
 .izma__settings-employees-inner-up {
    display: flex;
    align-items: center;
+   justify-content: space-between;
    margin-bottom: 25px;
 }
 
@@ -15,6 +16,7 @@
    font-weight: 600;
    font-size: 30px;
    line-height: 43px;
+   margin-bottom: 0;
    color: #000000;
 }
 
