--- a/src/components/LidsComponents/LidsBox/LidsBox.scss
+++ b/src/components/LidsComponents/LidsBox/LidsBox.scss
@@ -1,11 +1,12 @@
-.block {
+.lidItem {
    background: #fff;
+   position: relative;
    width: 100%;
    padding: 8px;
    box-sizing: border-box;
    margin-top: 20px;
    box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
-   
+
 
    .arrow {
       img {
@@ -30,12 +31,12 @@
          transform: rotate(90deg);
       }
 
-      .block-bottom {
+      .lidItem-bottom {
          display: flex;
 
       }
 
-      .block-center {
+      .lidItem-center {
          display: none;
       }
    }
@@ -52,11 +53,14 @@
       align-items: center;
       justify-content: space-between;
       padding-bottom: 4px;
-      margin-bottom: 8px;
+      // margin-bottom: 8px;
       position: relative;
 
       &-left {
-         font-size: 12px;
+         h2 {
+            display: flex;
+            font-size: 12px
+         }
       }
 
 
@@ -130,7 +134,7 @@
       &:hover {
          cursor: pointer;
 
-         .block-top-right {
+         .lidItem-top-right {
             button {
                opacity: 1;
                transition: all ease 0.5s;
@@ -146,6 +150,7 @@
       align-items: center;
       justify-content: center;
       text-align: center;
+      margin-top: 10px;
 
 
       h5 {
@@ -164,8 +169,12 @@
 
 
    &-center {
-      margin-top: 10px;
+      // margin-top: 10px;
       border-radius: 4px;
+
+      &.not {
+         min-height: 50px;
+      }
    }
 
 }
