--- a/src/components/LidsComponents/LidsItem/LidsItem.scss
+++ b/src/components/LidsComponents/LidsItem/LidsItem.scss
@@ -1,4 +1,4 @@
-.block-inner {
+.lidList-inner {
    padding-top: 8px;
    padding-bottom: 8px;
    padding-right: 10px;
@@ -10,7 +10,7 @@
    border-radius: 4px;
    box-sizing: border-box;
    position: relative;
-   margin-top: 10px;
+   margin-top: 8px;
 
 
 
@@ -19,10 +19,10 @@
       cursor: pointer;
       background-color: #d5e3fb;
 
-      
 
 
-      button.block-inner-user-button {
+
+      button.lidList-inner-user-button {
 
          opacity: 1;
          transition: all ease 0.5s;
@@ -86,7 +86,7 @@
       color: #5E5873;
       position: relative;
 
-      &:hover ~ .hasComment {
+      &:hover~.hasComment {
          display: flex;
       }
 
