--- a/src/containers/Forms/LidAddItem/LidAddItem.scss
+++ b/src/containers/Forms/LidAddItem/LidAddItem.scss
@@ -8,12 +8,13 @@
       justify-content: space-between;
       border-bottom: 1px solid #000000;
 
-      padding: 20px 0;
+      padding-bottom: 20px;
 
       h2 {
          font-style: normal;
+         margin-bottom: 0;
          font-weight: 600;
-         font-size: 30px;
+         font-size: 17px;
          line-height: 43px;
 
          color: #000000;
@@ -23,8 +24,8 @@
 
       .closeBox {
          position: relative;
-         width: 35px;
-         height: 35px;
+         width: 25px;
+         height: 25px;
          display: flex;
          align-items: center;
          cursor: pointer;
@@ -33,14 +34,14 @@
 
          span {
             position: absolute;
-            width: 30px;
+            width: 20px;
 
 
             &::before {
                content: "";
                position: absolute;
-               width: 30px;
-               height: 4px;
+               width: 20px;
+               height: 2px;
                background: black;
                transform: rotate(-45deg);
                border-radius: 50px;
@@ -49,8 +50,8 @@
             &::after {
                content: "";
                position: absolute;
-               width: 30px;
-               height: 4px;
+               width: 20px;
+               height: 2px;
                background: black;
                transform: rotate(45deg);
                border-radius: 50px;
@@ -72,7 +73,7 @@
    label {
       font-style: normal;
       font-weight: normal;
-      font-size: 17px;
+      font-size: .8rem;
       margin-left: 5px;
       line-height: 27px;
       color: #111111;
@@ -81,7 +82,7 @@
    input {
       width: 100%;
       outline: none;
-      font-size: 17px;
+      font-size: .8rem;
       background: #F7F9FB;
       border: 2px solid #EDF2F8;
       box-sizing: border-box;
@@ -92,14 +93,17 @@
    }
 
    button {
-      padding: 15px 30px;
-      box-sizing: border-box;
-      outline: none;
+      font-family: "Jost";
+      font-style: normal;
+      font-weight: 600;
+      font-size: .8rem;
+      color: #FFFFFF;
       border: none;
-      color: white;
-      margin-top: 30px;
       background: #090761;
       border-radius: 57px;
+      padding: 12px 40px;
+      margin-bottom: 30px;
+      margin-top: 15px;
    }
 
 }
