--- a/src/pages/Lids/LidsContent/LidsContent.scss
+++ b/src/pages/Lids/LidsContent/LidsContent.scss
@@ -1,113 +1,117 @@
 .lids {
+   width: 100%;
+}
+
+.lidsWrapper {
+   width: 100%;
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
-   width: 100%;
+   
+}
+
+.status1,
+.status2,
+.status3 {
+   display: flex;
+   align-items: center;
+   flex-direction: column;
+   width: 30% !important;
+}
+
+.status1 {
+
+   &-header {
+      width: 100%;
 
 
 
-   &-column {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 10px 20px;
-      box-sizing: border-box;
-      width: 30%;
-
-      &-top {
-
-
+      &-row {
+         display: flex;
+         align-items: center;
+         justify-content: space-between;
          width: 100%;
 
-            .lids-zero {
-               .block {
-                  background: transparent;
-                  box-shadow: none;
-                  margin-top: 0;
-               }
-            }
-
-
-         &-click {
-            margin-top: 30px;
+         form {
             width: 100%;
             display: flex;
             align-items: center;
-            justify-content: space-between;
-            cursor: pointer;
-
-            &-left {
-               font-size: 14px;
-               display: flex;
-               align-items: center;
-
-               img {
-                  width: 15px;
-                  height: 15px;
-                  margin-right: 10px;
-               }
-
-            }
-
-            &-right {
-               img {
-                  width: 10px;
-                  height: 10px;
-               }
-            }
-         }
-
-         form {
-            background: white;
-            margin-top: 30px;
-            display: none;
             flex-direction: column;
-            width: 100%;
-            padding: 0 15px;
-            padding-top: 15px;
+            padding: 20px;
             box-sizing: border-box;
             box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
+            background: white;
+            margin-top: 20px;
 
-         
+
 
             input {
-               border: none !important;
-               background: white;
-               width: 100%;
-               margin-bottom: 15px;
+               border: none;
                outline: none;
-               border-radius: 0 !important;
+               width: 100%;
+               padding: 5px;
                border-bottom: 1px solid transparent;
+               border: none;
+               border-radius: 0 !important;
 
                &:hover {
                   border: none;
                }
 
+               
                &:focus {
-                  border-bottom: 1px solid gray !important;
-               }
+                  border-bottom: 1px solid #5E5873;
 
+               }
             }
          }
 
-         &.active {
-            .home-column-top-click {
-               display: none;
+         &-right {
+
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+
+            img {
+               width: 15px;
+               height: 15px;
+            }
+         }
+
+         &-left {
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+
+            h4 {
+               font-style: normal;
+               font-weight: bold;
+               font-size: 12px;
+               color: #5E5873;
+               margin-left: 10px;
+               margin-bottom: 0;
             }
 
-            form {
-               display: flex;
+            img {
+               width: 15px;
+               height: 15px;
             }
          }
       }
 
-      &-center {
+      &-title {
+         margin-bottom: 20px;
          width: 100%;
          display: flex;
-         flex-direction: column;
-
+         align-items: center;
+         justify-content: flex-start;
+         font-style: normal;
+         font-weight: 600;
+         font-size: 20px;
+         line-height: 43px;
+         text-align: center;
+         text-transform: capitalize;
       }
-
-
    }
+
 }
