--- a/src/components/LidsComponents/LidsBox/LidsBox.scss
+++ b/src/components/LidsComponents/LidsBox/LidsBox.scss
@@ -83,7 +83,7 @@
             bottom: -135px;
             right: -10px;
             z-index: 100000000000;
-            padding: 5px 10px;
+            padding: 5px 0;
             background: #FFFFFF;
             border-radius: 4px;
             box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
@@ -91,12 +91,16 @@
             span {
                display: flex;
                align-items: center;
-               padding: 5px 20px 5px 5px;
+               padding: 5px 20px 5px 10px;
                font-style: normal;
                font-weight: normal;
                font-size: 12px;
                line-height: 21px;
                color: #000000;
+
+               &:hover {
+                  background: #E7E7EC;
+               }
 
                img {
                   margin-right: 10px;
