--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -114,6 +114,8 @@
 
             img {
                width: 100%;
+               width: 110px;
+               height: 50px;
                height: auto;
                object-fit: contain;
                border-radius: 7px;
@@ -122,7 +124,7 @@
 
          .left_part {
             font-family: "Calibri";
-            width: 60%;
+            width: 100%;
 
             @media only screen and (max-width: 800px) {
                width: 100%;
@@ -148,13 +150,19 @@
                   background-color: transparent;
                   font-family: "Jost";
                   font-style: normal;
-                  font-weight: 600;
-                  font-size: 24px;
-                  line-height: 35px;
+                  font-weight: 500;
                   color: #000000;
                   display: inline-block;
                   position: relative;
                   cursor: pointer;
+
+                  &:hover {
+                     color: #605edd;
+                  }
+                  
+                  &.active {
+                     color: #605edd;
+                  }
 
                   &.center_btn {
                      padding: 0 15px;
@@ -209,24 +217,6 @@
                   }
                }
 
-               // #numb {
-               //    background: #E0E6F1;
-               //    border: 1px solid #C9D5E4;
-               //    box-sizing: border-box;
-               //    border-radius: 4px;
-               //    width: 79px;
-               //    height: 53px;
-               //    padding: 15px 22px 14px 18px;
-               //    font-family: Calibri;
-               //    font-style: normal;
-               //    font-weight: normal;
-               //    font-size: 16px;
-               //    line-height: 20px;
-               //    color: #222222;
-               //    display: block;
-               //    position: absolute;
-               // }
-
                input.passwordLogin {
                   outline: none;
                   border: none;
@@ -262,4 +252,11 @@
    padding: 20px 20px;
    margin-left: auto;
    margin-right: auto;
+}
+
+.lang button {
+   font-size: 14px !important;
+   font-style: normal !important;
+   font-family: 'Arial';
+   font-weight: normal !important;
 }
