--- a/src/containers/Forms/LidAddItem1/LidAddItem1.scss
+++ b/src/containers/Forms/LidAddItem1/LidAddItem1.scss
@@ -68,6 +68,22 @@
       margin-top: 30px;
    }
 
+
+   .ant-picker {
+      background: #F7F9FB;
+      position: relative;
+      border: 2px solid #C9D5E4;
+      background: #F7F9FB;
+      width: 100%;
+      border-radius: 5px;
+      padding: 10px;
+
+      input {
+         border: none;
+         padding: 0;
+      }
+   }
+
    &.active {
       transform: translateX(0);
       transition: all ease 0.5s;
@@ -91,7 +107,6 @@
       box-sizing: border-box;
       border-radius: 7px;
       padding: 10px;
-      margin-top: 10px;
 
    }
 
