--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -228,18 +228,16 @@
                }
 
                .log_btn {
+                  font-style: normal;
+                  font-weight: 600;
+                  font-size: .8rem;
+                  color: #FFFFFF;
                   border: none;
                   background: #090761;
                   border-radius: 57px;
-                  font-family: "Jost";
-                  font-style: normal;
-                  font-weight: 600;
-                  font-size: 20px;
-                  line-height: 29px;
-                  text-align: center;
-                  color: #FFFFFF;
-                  padding: 12px 44px;
-                  margin-top: 35px;
+                  padding: 12px 40px;
+                  margin-bottom: 30px;
+                  margin-top: 15px;
                }
             }
          }
