--- a/src/pages/Teachers/containers/TeacherProfileLeft/TeacherProfileLeft.scss
+++ b/src/pages/Teachers/containers/TeacherProfileLeft/TeacherProfileLeft.scss
@@ -6,6 +6,9 @@
 
 .izma__teachers-payment-inner {
    font-family: "Calibri";
+   position: -webkit-sticky;
+   position: sticky;
+   top: 40px;
 }
 
 .izma__teachers-payment-inner-headings {
