--- a/src/pages/Settings_Pages/EnterForm/EnterForm.scss
+++ b/src/pages/Settings_Pages/EnterForm/EnterForm.scss
@@ -1,12 +1,27 @@
 .request-wrapper1 {
-   padding: 50px 150px;
+   
+   display: flex;
+   align-items: center;
+   justify-content: center;
+
+   .boxLogin1 {
+      width: 670px;
+
+      @media only screen and (max-width: 800px) {
+         flex-direction: column;
+         width: 100%;
+         box-sizing: border-box;
+         padding: 0 20px;
+
+      }
+   }
 
    .inner1 {
       width: 100%;
 
       .banner1 {
          width: 100%;
-         height: 238px;
+         height: 160px;
          box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.16);
          border-radius: 7px;
          margin-bottom: 37px;
@@ -31,37 +46,6 @@
          padding: 0 40px 0 40px;
          position: relative;
 
-         input {
-            border: none;
-            width: 80%;
-            padding: 10px 10px 10px 41px;
-            background: #F7F9FB;
-            border: 2px solid #EDF2F8;
-            box-sizing: border-box;
-            border-radius: 7px;
-            font-size: 16px;
-            outline: "none";
-            transition: 0.3s;
-
-            &:focus {
-               border-color: #090761;
-            }
-         }
-
-         .circle-pen1 {
-            cursor: pointer;
-            width: 47px;
-            height: 47px;
-            border: none;
-            border-radius: 50%;
-            background-color: transparent;
-            border: 1.5px solid #0F9E95;
-            box-sizing: border-box;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-         }
-
          &::before {
             content: '';
             position: absolute;
@@ -82,6 +66,16 @@
             color: #000000;
             margin-right: 70px;
          }
+
+         button {
+            width: 47px;
+            height: 47px;
+            border: none;
+            border-radius: 50%;
+            background-color: transparent;
+            border: 1.5px solid #0F9E95;
+            box-sizing: border-box;
+         }
       }
 
       .login_page1 {
@@ -90,19 +84,34 @@
          border-radius: 7px;
          margin-top: 45px;
          display: flex;
+         justify-content: space-between;
          padding: 34px 47px 48px 40px;
          box-sizing: border-box;
          align-items: center;
-         justify-content: space-around;
+
+         @media only screen and (max-width: 800px) {
+            flex-direction: column;
+            width: 100%;
+
+         }
 
          .right_part1 {
             margin-right: 38px;
-            width: 100px;
-            height: 100px;
+            max-width: 40%;
+            min-width: 40%;
+            height: 150px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+
+
 
             img {
-               width: 173px;
-               height: 95px;
+               width: 100%;
+               width: 110px;
+               height: 50px;
+               height: auto;
                object-fit: contain;
                border-radius: 7px;
             }
@@ -110,7 +119,12 @@
 
          .left_part1 {
             font-family: "Calibri";
-            width: 70%;
+            width: 100%;
+
+            @media only screen and (max-width: 800px) {
+               width: 100%;
+
+            }
 
             .top_items1 {
                display: flex;
@@ -131,15 +145,21 @@
                   background-color: transparent;
                   font-family: "Jost";
                   font-style: normal;
-                  font-weight: 600;
-                  font-size: 24px;
-                  line-height: 35px;
+                  font-weight: 500;
                   color: #000000;
                   display: inline-block;
                   position: relative;
                   cursor: pointer;
 
-                  &.center_btn1 {
+                  &:hover {
+                     color: #605edd;
+                  }
+
+                  &.active {
+                     color: #605edd;
+                  }
+
+                  &.center_btn {
                      padding: 0 15px;
 
                      &::before {
@@ -184,41 +204,23 @@
                   font-size: 16px;
                   line-height: 20px;
                   color: #222222;
-                  margin-bottom: 14px;
+                  margin-bottom: 4px;
                   display: block;
 
-                  &.mtt1 {
+                  &.mtt {
                      margin-top: 25px;
                   }
                }
 
-               // #numb {
-               //    background: #E0E6F1;
-               //    border: 1px solid #C9D5E4;
-               //    box-sizing: border-box;
-               //    border-radius: 4px;
-               //    width: 79px;
-               //    height: 53px;
-               //    padding: 15px 22px 14px 18px;
-               //    font-family: Calibri;
-               //    font-style: normal;
-               //    font-weight: normal;
-               //    font-size: 16px;
-               //    line-height: 20px;
-               //    color: #222222;
-               //    display: block;
-               //    position: absolute;
-               // }
-
-               // input {
-               //    outline: none;
-               //    border: none;
-               //    border: 1px solid #C9D5E4;
-               //    box-sizing: border-box;
-               //    border-radius: 4px;
-               //    padding: 11px;
-               //    width: 100%;
-               // }
+               input.passwordLogin {
+                  outline: none;
+                  border: none;
+                  border: 1px solid #C9D5E4;
+                  box-sizing: border-box;
+                  border-radius: 4px;
+                  padding: 11px;
+                  width: 100%;
+               }
 
                .log_btn1 {
                   font-style: normal;
@@ -236,4 +238,18 @@
          }
       }
    }
+}
+
+.container {
+   max-width: 1140px;
+   padding: 20px 20px;
+   margin-left: auto;
+   margin-right: auto;
+}
+
+.lang button {
+   font-size: 14px !important;
+   font-style: normal !important;
+   font-family: 'Arial';
+   font-weight: normal !important;
 }
