--- a/src/containers/Forms/LidEdit/LidEdit.scss
+++ b/src/containers/Forms/LidEdit/LidEdit.scss
@@ -10,10 +10,62 @@
    box-shadow: 0 0 10px black;
    transform: translateX(150%);
    transition: all ease 0.5s;
+   overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+       width: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+       background: #fff;
+    }
+
+    &::-webkit-scrollbar-thumb {
+       background: #090761;
+    }
+
+
+    .date__picker,
+    .ant-picker {
+       background: #F7F9FB;
+       border: 2px solid #C9D5E4;
+       box-sizing: border-box;
+       border-radius: 7px;
+    }
+
+    #sty3 {
+       .ant-picker-input {
+          padding: 10px 0;
+       }
+    }
 
    .row {
       margin-bottom: 10px;
    }
+
+    input[type=text] {
+       outline: none;
+       border: 2px solid #C9D5E4;
+       transition: all ease 0.5s;
+        width: 100%;
+        outline: none;
+        font-size: .8rem;
+        background: #F7F9FB;
+        box-sizing: border-box;
+        border-radius: 7px;
+        padding: 10px;
+
+       &:hover {
+          transition: all ease 0.5;
+          border: 2px solid #40a9ff;
+       }
+    }
+
+    input {
+       outline: none;
+       border-radius: 7px;
+       width: 100%;
+    }
 
    &-body {
       width: 100%;
@@ -27,7 +79,7 @@
          h2 {
             font-style: normal;
             font-weight: 600;
-            font-size: 24px;
+            font-size: 17px;
             line-height: 35px;
             /* identical to box height */
 
@@ -51,14 +103,13 @@
       justify-content: space-between;
       border-bottom: 1px solid #000000;
 
-      padding: 20px 0;
+      padding-bottom:20px;
 
       h2 {
          font-style: normal;
          font-weight: 600;
-         font-size: 30px;
-         line-height: 43px;
-
+         font-size: 17px;
+          margin-bottom: 0;
          color: #000000;
 
       }
@@ -66,8 +117,8 @@
 
       .closeBox {
          position: relative;
-         width: 35px;
-         height: 35px;
+         width: 25px;
+         height: 25px;
          display: flex;
          align-items: center;
          cursor: pointer;
@@ -76,14 +127,14 @@
 
          span {
             position: absolute;
-            width: 30px;
+            width: 20px;
 
 
             &::before {
                content: "";
                position: absolute;
-               width: 30px;
-               height: 4px;
+               width: 20px;
+               height: 2px;
                background: black;
                transform: rotate(-45deg);
                border-radius: 50px;
@@ -92,8 +143,8 @@
             &::after {
                content: "";
                position: absolute;
-               width: 30px;
-               height: 4px;
+               width: 20px;
+               height: 2px;
                background: black;
                transform: rotate(45deg);
                border-radius: 50px;
@@ -113,34 +164,45 @@
    label {
       font-style: normal;
       font-weight: normal;
-      font-size: 17px;
+      font-size: .8rem;
       margin-left: 5px;
       line-height: 27px;
       color: #111111;
    }
 
-   input {
+   textarea {
+      border: none;
       width: 100%;
-      outline: none;
-      font-size: 17px;
+      max-height: 178px;
+      resize: vertical;
       background: #F7F9FB;
       border: 2px solid #EDF2F8;
       box-sizing: border-box;
       border-radius: 7px;
+      outline: none;
       padding: 10px;
-      margin-top: 10px;
+      border: 2px solid #C9D5E4;
+      transition: all ease 0.5s;
 
+      &:hover {
+         transition: all ease 0.5;
+         border: 2px solid #40a9ff;
+      }
    }
 
+   
    button {
-      padding: 15px 30px;
-      box-sizing: border-box;
-      outline: none;
+      font-family: "Jost";
+      font-style: normal;
+      font-weight: 600;
+      font-size: .8rem;
+      color: #FFFFFF;
       border: none;
-      color: white;
-      margin-top: 30px;
       background: #090761;
       border-radius: 57px;
+      padding: 12px 40px;
+      margin-bottom: 30px;
+      margin-top: 15px;
    }
 
 }
