--- a/src/components/DropSearch/DropSearch.scss
+++ b/src/components/DropSearch/DropSearch.scss
@@ -70,7 +70,7 @@
       background: #090761;
    }
 
-   option {
+   span {
       width: 100%;
       display: block;
       cursor: pointer;
@@ -121,7 +121,7 @@
       }
    }
 
-   option:hover,
+   span:hover,
    .active {
       background-color: #40B682;
       color: white;
