--- a/src/containers/Finances/FinancesForm/FinanceRepaymeynForm/FinanceRepaymeynForm.scss
+++ b/src/containers/Finances/FinancesForm/FinanceRepaymeynForm/FinanceRepaymeynForm.scss
@@ -6,6 +6,11 @@
    border-bottom: 1px solid #000000;
 }
 
+  .izma__finance-form-radio-heading {
+      font-weight: bold !important;
+      font-size: .8rem !important;
+   }
+
 .izma__lidlar__form-bolim-form-heading {
    font-style: normal;
    font-weight: 600;
