--- a/src/containers/Forms/CoursesAdd/CoursesAdd.scss
+++ b/src/containers/Forms/CoursesAdd/CoursesAdd.scss
@@ -13,6 +13,10 @@
 
 .form_group {
    margin-top: 25px;
+    label {
+       font-weight: bold !important;
+       font-size: .8rem !important;
+    }
 }
 
 .izma__lidlar__form-bolim-form-heading {
