--- a/src/containers/Forms/GroupAdd/GroupAdd.scss
+++ b/src/containers/Forms/GroupAdd/GroupAdd.scss
@@ -1,4 +1,8 @@
 .groupForm {
+    label {
+       font-weight: bold !important;
+       font-size: .8rem !important;
+    }
    .inner {
       max-width: 670px;
       box-sizing: border-box;
