--- a/src/pages/App/App.scss
+++ b/src/pages/App/App.scss
@@ -1,6 +1,6 @@
 body {
    margin: 0;
-   font-family: 'Jost', 'Calibri', sans-serif;
+   font-family: 'Jost', 'Calibri', sans-serif !important;
    box-sizing: border-box;
 }
 
