--- a/src/containers/Finances/FinancesForm/FinanceAddPaymentForm/financeAddPaymentForm.scss
+++ b/src/containers/Finances/FinancesForm/FinanceAddPaymentForm/financeAddPaymentForm.scss
@@ -11,8 +11,8 @@
     justify-content: space-between;
     padding-bottom: 24px;
     border-bottom: 1px solid #000000;
-    min-width: 400px !important;
-    max-width: 400px !important;
+    // min-width: 400px !important;
+    // max-width: 400px !important;
 }
 .izma__courses__form-bolim-form .ant-input {
     margin-top: 8px;
