--- a/src/containers/Finances/FinancesForm/FinanceAddPaymentForm/financeAddPaymentForm.scss
+++ b/src/containers/Finances/FinancesForm/FinanceAddPaymentForm/financeAddPaymentForm.scss
@@ -5,6 +5,16 @@
 .izma__form__teaxtarea .ant-input {
     min-height: 190px;
 }
+
+#skPay {
+
+    .ant-picker {
+        padding: 0 10px;
+    }
+    input {
+        padding: 10px 0;
+    }
+}
 .izma__courses__form-bolim-form-up {
     display: flex;
     align-items: center;
