--- a/src/containers/Forms/TeacherAdd/TeacherAdd.scss
+++ b/src/containers/Forms/TeacherAdd/TeacherAdd.scss
@@ -183,7 +183,12 @@
                border: 2px solid #40a9ff;
             }
          }
-
+         
+         .form_one .password {
+           input {
+               font-size: inherit !important; 
+           }
+         }
          .ant-space {
             width: 100% !important;
          }
