--- a/src/components/MoliyaComponents/OrderDetelis/OrderDetails.scss
+++ b/src/components/MoliyaComponents/OrderDetelis/OrderDetails.scss
@@ -10,7 +10,7 @@
 
    .heading {
       h1 {
-         font-family: Jost;
+         font-family: 'Jost';
          font-style: normal;
          font-weight: 500;
          font-size: 22px;
