--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -290,6 +290,9 @@
          &:nth-child(5) {
             width: 15%;
          }
+         &:nth-child(6) {
+            width: 12%;
+         }
       }
       .studentHash3 {
          display: flex;
