--- a/src/components/TableBlock/TableBlock.scss
+++ b/src/components/TableBlock/TableBlock.scss
@@ -367,6 +367,9 @@
       &:nth-child(5) {
          width: 15%;
       }
+       &:nth-child(6) {
+          width: 12%;
+       }
    }
    
    .financeCostHash {
