--- a/src/containers/Finances/FinancesForm/FinanceAddPaymentForm/financeAddPaymentForm.scss
+++ b/src/containers/Finances/FinancesForm/FinanceAddPaymentForm/financeAddPaymentForm.scss
@@ -46,6 +46,7 @@
     .file {
         font-weight: bold !important;
         font-size: .8rem !important;
+        font-family: 'Jost', 'Calibri', sans-serif !important;
     }
 }
 .izma__courses__form-bolim-form-heading {
