--- a/src/containers/Finances/FinancesForm/FinanceRepaymeynForm/FinanceRepaymeynForm.scss
+++ b/src/containers/Finances/FinancesForm/FinanceRepaymeynForm/FinanceRepaymeynForm.scss
@@ -9,6 +9,7 @@
   .izma__finance-form-radio-heading {
       font-weight: bold !important;
       font-size: .8rem !important;
+      font-family: 'Jost', 'Calibri', sans-serif !important;
    }
 
 .izma__lidlar__form-bolim-form-heading {
