--- a/src/containers/Forms/CoursesAdd/CoursesAdd.scss
+++ b/src/containers/Forms/CoursesAdd/CoursesAdd.scss
@@ -16,6 +16,7 @@
     label {
        font-weight: bold !important;
        font-size: .8rem !important;
+       font-family: 'Jost', 'Calibri', sans-serif !important;
     }
 }
 
