--- a/src/containers/Forms/GroupAdd/GroupAdd.scss
+++ b/src/containers/Forms/GroupAdd/GroupAdd.scss
@@ -2,6 +2,7 @@
     label {
        font-weight: bold !important;
        font-size: .8rem !important;
+       font-family: 'Jost', 'Calibri', sans-serif !important;
     }
    .inner {
       max-width: 670px;
