--- a/src/containers/Forms/SettingsArchiveForm/SettingsArchiveForm.scss
+++ b/src/containers/Forms/SettingsArchiveForm/SettingsArchiveForm.scss
@@ -3,6 +3,7 @@
     label, .file {
        font-weight: bold !important;
        font-size: .8rem !important;
+        font-family: 'Jost', 'Calibri', sans-serif !important;
     }
 
    
@@ -184,6 +185,7 @@
       .gen_one {
          display: flex;
          align-items: center;
+         position: relative;
 
          span {
             margin-right: 42px;
@@ -210,6 +212,12 @@
             margin-right: 10px;
             cursor: pointer;
             margin-bottom: 0;
+         }
+
+         input {
+            display: flex;
+            position: absolute;
+            opacity: 0;
          }
 
          input[type=radio]:checked+label {
